# kube-agent

./: README.md  pyproject.toml  requirements.txt  setup.py
src/: main.py
src/agents/: basic_agent.py
src/config/: settings.py
src/core/: graph.py  k8s_client.py
src/tools/: deployment.py  diagnostics.py  kubectl.py  yaml_tools.py
src/ui/: cli.py
src/utils/: console.py
tests/: test_deployment.py  test_diagnostic.py  test_yaml_editor.py
