[tool.poetry]
name = "k8s-langraph-tool"
version = "0.1.0"
description = "A tool for Kubernetes operations including diagnostics, deployment, and YAML editing."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^18.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"